[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sensespace-did"
version = "0.1.0"
description = "SenseSpace DID token verification library"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Shiotoli", email = "shiotoli@gmail.com" }]
keywords = ["did", "jwt", "verification", "sensespace", "ed25519", "ss58"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "PyJWT[crypto]>=2.8.0",
    "cryptography>=41.0.0",
    "base58>=2.1.1",
    "httpx>=0.25.0",
    "fastmcp>=2.11.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black>=23.0.0", "ruff>=0.1.0"]

[project.urls]
"Homepage" = "https://github.com/verisense-network/sensespace-did"
"Bug Tracker" = "https://github.com/verisense-network/sensespace-did/issues"
